--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,42 @@
 language: python
 
-python:
-  - "2.7"
-  - "3.4"
-  - "3.5"
-  - "3.6"
-  - "3.7"
-  - "pypy"
-  - "pypy3"
+jobs:
+  include:
+    # - os: linux
+    #   python: 2.7
+    # - os: linux
+    #   python: 3.4
+    # - os: linux
+    #   python: 3.5
+    # - os: linux
+    #   python: 3.6
+    # - os: linux
+    #   python: 3.7
+    # - os: linux
+    #   python: pypy
+    # - os: linux
+    #   python: pypy3
+    # - os: windows
+    #   language: bash
+    #   env: PYTHON_VERSION=2.7.11
+    # - os: windows
+    #   language: bash
+    #   env: PYTHON_VERSION=3.4.4.20180111
+    # - os: windows
+    #   language: bash
+    #   env: PYTHON_VERSION=3.5.4
+    # - os: windows
+    #   language: bash
+    #   env: PYTHON_VERSION=3.6.8
+    - os: windows
+      language: bash
+      env: PYTHON_VERSION=3.7.5
+    # - os: windows
+    #   language: bash
+    #   env: PYTHON_VERSION=3.8.0
 
 install:
-  - pip install -r requirements.txt
-  - coverage --version
-  - sudo apt-get update
-  - sudo apt-get --quiet=2 install patchutils
-  - python setup.py --quiet install
+  - ./.travis/install.sh
 
 script:
-  - make test
+  - ./.travis/test.sh
