--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,9 @@ jobs:
     #   env: PYTHON_VERSION=3.5.4
     - os: windows
       language: bash
-      env: PYTHON_VERSION=3.6.8
+      env:
+      - PYTHON_VERSION=3.6.8
+      - PYTHON=python3
     # - os: windows
     #   language: bash
     #   env: PYTHON_VERSION=3.7.5
